# projekt-PJC

./: CMakeLists.txt  README.md  main.cpp
GameLogic/: Word.cpp  Word.h  wordManager.cpp  wordManager.h
Menus/: BaseMenu.cpp  BaseMenu.h  DifficultyMenu.cpp  DifficultyMenu.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h  SettingsMenu.cpp  SettingsMenu.h
Words/: Eng.txt  Pl
